force-app/main/default/objects/Job_Application__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>Job title being applied for.</description>
    <inlineHelpText>Enter the job title you are applying for.</inlineHelpText>
    <label>Position/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>