force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Gross salary</description>
    <inlineHelpText>Enter the gross salary for this job. If a range is given this represents the mid point between high and low</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>