force-app/main/default/objects/Job_Application__c/fields/Salary_Currency__c.field-meta.xml
<CustomField>
    <fullName>Salary_Currency__c</fullName>
    <description>The currency the salary is paid in</description>
    <inlineHelpText>Choose the currency the salary is paid in</inlineHelpText>
    <label>Salary Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - United States Dollar</fullName>
            </value>
            <value>
                <fullName>MEX- Mexican Peso</fullName>
            </value>
            <value>
                <fullName>CAD - Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>GBP - Great Britain Pound</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
            <value>
                <fullName>ZAR - South African Rand</fullName>
            </value>
            <value>
                <fullName>NZD - New Zealand Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>