force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks the current stage (Saved, Applied, Interviewing, Offer Received, Hire/Rejected)</description>
    <inlineHelpText>Select the stage of this job application</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
                <default>true</default>
                <label>Saved</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>Hired / Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>